# osu_rivals

./: .editorconfig  .flake8  .gitattributes  .gitignore  Procfile  README.md  README.rst  pyproject.toml  requirements.txt  run.py
data/: beatmaps.json  scores.db
osu/: app.py  beatmap.py  data.py  db_utils.py  main.py  mods.py  osu_rivals.py  test.json
osu/templates/: base.html  index.html  result.html
score-comparison/: README.md  requirements.txt
score-comparison/osu/: osu_rivals.py
score-comparison/osu/templates/: base.html
tests/: test_osu.py
