[tool.poetry]
name = "osu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
flask = "^1.1.2"
gunicorn = "^20.0.4"
sqlalchemy = "^1.3.18"
psycopg2 = "^2.8.5"
flask_sqlalchemy = "^2.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
mypy = "^0.780"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
